--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,9 @@
               "src/assets"
             ],
             "styles": [
+              {
+                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              },
               "src/styles.scss"
             ],
             "scripts": []
@@ -118,6 +121,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "driving-app"
+    }
+  },
+  "defaultProject": "driving-app",
+  "cli": {
+    "defaultCollection": "@datorama/akita"
+  }
 }
