--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "driving-app",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,14 +11,24 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.7",
+    "@angular/animation": "^4.0.0-beta.8",
     "@angular/animations": "~8.0.0",
+    "@angular/cdk": "^8.1.3",
     "@angular/common": "~8.0.0",
     "@angular/compiler": "~8.0.0",
     "@angular/core": "~8.0.0",
+    "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "~8.0.0",
+    "@angular/material": "^8.1.3",
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@datorama/akita": "^4.10.0",
+    "@datorama/akita-ng-entity-service": "^1.0.0",
+    "@ngx-pwa/local-storage": "^8.2.1",
+    "@types/googlemaps": "^3.37.4",
+    "agm-direction": "^0.7.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
